# luxia-companion

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: ingest.py
src/luxia_companion/: config.py  crew.py  main.py
src/luxia_companion/config/: agents.yaml  tasks.yaml
src/luxia_companion/knowledge/: ingestion.py  store.py
src/luxia_companion/tools/: knowledge_search.py
src/luxia_companion/whatsapp/: client.py
tests/: test_crew.py  test_knowledge.py  test_webhook.py
