[project]
name = "luxia-companion"
version = "0.1.0"
description = "WhatsApp AI companion for solar energy partners - powered by CrewAI + RAG"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.86.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "twilio>=9.0.0",
    "chromadb>=0.5.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.2.0",
    "pypdf>=4.0.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luxia_companion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
